[package]
name = "multinortest"
version = "0.1.0"
edition = "2021"
authors = ["Berke Durak <bd@exhrd.fr>"]

[dependencies]
ndarray = "0.15.1"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.0"
num = "0.4.0"
hdf5 = { version = "^0.8.1" }
rand = { version = "^0.8.5" }
nalgebra = { version = "^0.30.1" }
progressing = { version = "3" }

[dependencies.clap]
version = "3.0.14"
features = ["derive"]

[dependencies.ndarray-linalg]
version = "0.14.1"
features = ["openblas-system"]
